Add @tetron's quote
commented out for now

--- a/Common-Workflow-Language-announcement.html
+++ b/Common-Workflow-Language-announcement.html
@@ -13,6 +13,9 @@ independently manage their own corporate structure and administrative
 services.</p>
 
 <p>FIXME-QUOTE (why CWL is joining Conservancy)</p>
+<!-- "By joining the Conservancy, the CWL project hopes to expand its
+outreach efforts across countries and scientific fields to promote open,
+reproducible science through the use of standards-based workflows for data analysis." from Peter Amstutz -->
 
 <p>"We're excited to have the Common Workflow Language project join Conservancy,"
 said Karen M. Sandler, Conservancy's Executive Director.  "CWL is solving
